// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtonContainer Styles should render the container with 12% from bottom 1`] = `
<div
  className="indexstyles__ActionButtonContainer-dmtei VfCNM"
/>
`;

exports[`ActionButtonContainer Styles should render the container with 24% from bottom 1`] = `
<div
  className="indexstyles__ActionButtonContainer-dmtei kanVTl"
/>
`;

exports[`ActionButtonContainer Styles should render the main container without full container mixin applied 1`] = `
<div
  className="indexstyles__Main-lhfXmf bMnLSq"
/>
`;
